--- a/portfolio.html
+++ b/portfolio.html
@@ -17,18 +17,20 @@
   <body>
     <header>
       <div class="container">
+        <div class="header-title">
         <nav class="header">
           <a class="logos" href="/"> <span class="logo">Web</span> Studio</a>
-          <ul class="social-links">
-            <li class="link-title"><a href="" class="link">Студия</a></li>
+           <ul class="social-links">
             <li class="link-title">
-              <a href="./portfolio.html">Портфолио</a>
+              <a href="./index.html">Студия</a></li>
+            <li class="link-title">
+              <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
             <li class="link-title"><a href="">Контакты</a></li>
           </ul>
         </nav>
         <ul class="contacts">
-          <li>
+          <li class="contacts-item">
             <img src="./images/envelope.svg" alt="Конверт" />
             <a class="phone" href="maito:info@defstudio.com"
               >info@defstudio.com</a
@@ -39,6 +41,7 @@
             <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -53,63 +56,63 @@
       </ul>
       <ul class="flex-container">
         <li class="flex-element">
-          <a href="">
-            <img src="./images/tehnokryak.jpg" alt="Компьютер с открытой веб-страницей" /></a>
+          <a href="" class="subject-title">
+            <img src="./images/tehnokryak.jpg" alt="Компьютер с открытой веб-страницей" width="370px"/></a>
           <h2 class="subject">Технокряк</h2>
           <p class="subtitle">Веб-сайт</p>
         </li>
         <li class="flex-element">
-          <a href="">
-            <img src="./images/man.jpg" alt="Баскетболисты борющиеся за мяч" />
+          <a href="" class="subject-title">
+            <img src="./images/man.jpg" alt="Баскетболисты борющиеся за мяч" width="370px"/>
           </a>
           <h2 class="subject">Постер New Orlean vs Golden Stars</h2>
           <p class="subtitle">Дизайн</p>
         </li>
         <li class="flex-element">
-          <a href="">
-            <img src="./images/fish.jpg" alt="Логотип ресторана Seafood" />
+          <a href="" class="subject-title">
+            <img src="./images/fish.jpg" alt="Логотип ресторана Seafood" width="370px"/>
           </a>
           <h2 class="subject">Ресторан Seafood</h2>
           <p class="subtitle">Приложение</p>
         </li>
         <li class="flex-element">
-          <a href="">
-            <img src="./images/hp.jpg" alt="Наушники" />
+          <a href="" class="subject-title">
+            <img src="./images/hp.jpg" alt="Наушники" width="370px"/>
           </a>
           <h2 class="subject">Проект Prime</h2>
           <p class="subtitle">Маркетинг</p>
         </li>
         <li class="flex-element">
-          <a href="">
-            <img src="./images/box.jpg" alt="Две коробки на столе" />
+          <a href="" class="subject-title">
+            <img src="./images/box.jpg" alt="Две коробки на столе" width="370px"/>
           </a>
           <h2 class="subject">Проект Boxes</h2>
           <p class="subtitle">Приложение</p>
         </li>
         <li class="flex-element">
-          <a href="">
-            <img src="./images/comp3.jpg" alt="Компьютер" />
+          <a href="" class="subject-title">
+            <img src="./images/comp3.jpg" alt="Компьютер" width="370px"/>
           </a>
           <h2 class="subject">Inspiration has no Borders</h2>
           <p class="subtitle">Веб-сайт</p>
         </li>
         <li class="flex-element">
-          <a href="">
-            <img src="./images/book.jpg" alt="Развернутая книга на столе" />
+          <a href="" class="subject-title">
+            <img src="./images/book.jpg" alt="Развернутая книга на столе" width="370px"/>
           </a>
           <h2 class="subject">Издание Limited Edition</h2>
           <p class="subtitle">Дизайн</p>
         </li>
         <li class="flex-element">
-          <a href="">
-            <img src="./images/lab.jpg" alt="Бирка с логотипом Лаб" />
+          <a href="" class="subject-title">
+            <img src="./images/lab.jpg" alt="Бирка с логотипом Лаб" width="370px"/>
           </a>
           <h2 class="subject">Проект LAB</h2>
           <p class="subtitle">Маркетинг</p>
         </li>
         <li class="flex-element">
-          <a href="">
-            <img src="./images/laptop.jpg" alt="Ноутбук" />
+          <a href="" class="subject-title">
+            <img src="./images/laptop.jpg" alt="Ноутбук" width="370px"/>
           </a>
           <h2 class="subject">Growing Business</h2>
           <p class="subtitle">Приложение</p>
