--- a/index.html
+++ b/index.html
@@ -17,28 +17,32 @@
   <body>
     <header>
       <div class="container">
-        <nav class="header">
-          <a class="logos" href="/"> <span class="logo">Web</span> Studio</a>
-          <ul class="social-links">
-            <li class="link-title"><a href="" class="link">Студия</a></li>
-            <li class="link-title">
-              <a href="./portfolio.html">Портфолио</a>
+        <div class="header-title">
+          <nav class="header">
+            <a class="logos" href="/"> <span class="logo">Web</span> Studio</a>
+            <ul class="social-links">
+              <li class="link-title">
+                <a href="./index.html" class="link">Студия</a>
+              </li>
+              <li class="link-title">
+                <a href="./portfolio.html">Портфолио</a>
+              </li>
+              <li class="link-title"><a href="">Контакты</a></li>
+            </ul>
+          </nav>
+          <ul class="contacts">
+            <li class="contacts-item">
+              <img src="./images/envelope.svg" alt="Конверт" />
+              <a class="phone" href="maito:info@defstudio.com"
+                >info@defstudio.com</a
+              >
             </li>
-            <li class="link-title"><a href="">Контакты</a></li>
+            <li>
+              <img src="./images/tel.svg" alt="Телефон" />
+              <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
           </ul>
-        </nav>
-        <ul class="contacts">
-          <li>
-            <img src="./images/envelope.svg" alt="Конверт" />
-            <a class="phone" href="maito:info@defstudio.com"
-              >info@defstudio.com</a
-            >
-          </li>
-          <li>
-            <img src="./images/tel.svg" alt="Телефон" />
-            <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -95,19 +99,19 @@
       <section class="container-box">
         <h2 class="heading">Чем мы занимаемся</h2>
         <ul class="items-title">
-          <li>
+          <li class="heading-title">
             <a href="">
               <img src="./images/comp.jpg" alt="Компьютер" />
-              <p class="items">Десктопные приложения</p>
             </a>
+            <p class="items">Десктопные приложения</p>
           </li>
-          <li>
+          <li class="heading-title">
             <a href="">
               <img src="./images/telephone.jpg" alt="Телефон" />
               <p class="items">Мобильные приложения</p>
             </a>
           </li>
-          <li>
+          <li class="heading-title">
             <a href="">
               <img src="./images/comp2.jpg" alt="Стационарный компьютер" />
               <p class="items">Дизайнерские решения</p>
@@ -120,27 +124,42 @@
         <ul class="meta">
           <li class="holder">
             <img src="./images/jhon.jpg" alt="Фото John Smith" width="270" />
-            <h3>John Smith</h3>
+            <h3 class="name">John Smith</h3>
             <p class="desc">Product Designer</p>
             <ul class="socials">
               <li class="socials-title">
                 <a href="https://www.instagram.com/?hl=ru">
-                  <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
+                  <img
+                    src="./images/instagram.svg"
+                    alt="Логотип Инстаграмм"
+                    width="20"
+                  />
                 </a>
               </li>
               <li class="socials-title">
                 <a href="https://www.facebook.com/">
-                  <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
+                  <img
+                    src="./images/facebook.svg"
+                    alt="Логотип Фейсбук"
+                    width="20"
+                  />
                 </a>
               </li>
               <li class="socials-title">
                 <a href="https://twitter.com/explore">
-                  <img src="./images/twitter.svg" alt="Логотип твиттер"
+                  <img
+                    src="./images/twitter.svg"
+                    alt="Логотип твиттер"
+                    width="20"
                 /></a>
               </li>
               <li class="socials-title">
                 <a href="https://www.linkedin.com/"></a>
-                <img src="./images/linkedln.svg" alt="Логотип линкодин" />
+                <img
+                  src="./images/linkedln.svg"
+                  alt="Логотип линкодин"
+                  width="20"
+                />
               </li>
             </ul>
           </li>
@@ -150,27 +169,42 @@
               alt="Фото Marta Stewart"
               width="270"
             />
-            <h3>Marta Stewart</h3>
+            <h3 class="name">Marta Stewart</h3>
             <p class="desc">Frontend Developer</p>
             <ul class="socials">
               <li class="socials-title">
                 <a href="https://www.instagram.com/?hl=ru">
-                  <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
+                  <img
+                    src="./images/instagram.svg"
+                    alt="Логотип Инстаграмм"
+                    width="20"
+                  />
                 </a>
               </li>
               <li class="socials-title">
                 <a href="https://www.facebook.com/">
-                  <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
+                  <img
+                    src="./images/facebook.svg"
+                    alt="Логотип Фейсбук"
+                    width="20"
+                  />
                 </a>
               </li>
               <li class="socials-title">
                 <a href="https://twitter.com/explore">
-                  <img src="./images/twitter.svg" alt="Логотип твиттер"
+                  <img
+                    src="./images/twitter.svg"
+                    alt="Логотип твиттер"
+                    width="20"
                 /></a>
               </li>
               <li class="socials-title">
                 <a href="https://www.linkedin.com/"></a>
-                <img src="./images/linkedln.svg" alt="Логотип линкодин" />
+                <img
+                  src="./images/linkedln.svg"
+                  alt="Логотип линкодин"
+                  width="20"
+                />
               </li>
             </ul>
           </li>
@@ -180,27 +214,42 @@
               alt="Фото Robert Jakis"
               width="270"
             />
-            <h3>Robert Jakis</h3>
+            <h3 class="name">Robert Jakis</h3>
             <p class="desc">Marketing</p>
             <ul class="socials">
               <li class="socials-title">
                 <a href="https://www.instagram.com/?hl=ru">
-                  <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
+                  <img
+                    src="./images/instagram.svg"
+                    alt="Логотип Инстаграмм"
+                    width="20"
+                  />
                 </a>
               </li>
               <li class="socials-title">
                 <a href="https://www.facebook.com/">
-                  <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
+                  <img
+                    src="./images/facebook.svg"
+                    alt="Логотип Фейсбук"
+                    width="20"
+                  />
                 </a>
               </li>
               <li class="socials-title">
                 <a href="https://twitter.com/explore">
-                  <img src="./images/twitter.svg" alt="Логотип твиттер"
+                  <img
+                    src="./images/twitter.svg"
+                    alt="Логотип твиттер"
+                    width="20"
                 /></a>
               </li>
               <li class="socials-title">
                 <a href="https://www.linkedin.com/"></a>
-                <img src="./images/linkedln.svg" alt="Логотип линкодин" />
+                <img
+                  src="./images/linkedln.svg"
+                  alt="Логотип линкодин"
+                  width="20"
+                />
               </li>
             </ul>
           </li>
@@ -211,27 +260,42 @@
               width="270"
               height="260"
             />
-            <h3>Martin Doe</h3>
+            <h3 class="name">Martin Doe</h3>
             <p class="desc">UI Designer</p>
             <ul class="socials">
               <li class="socials-title">
                 <a href="https://www.instagram.com/?hl=ru">
-                  <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
+                  <img
+                    src="./images/instagram.svg"
+                    alt="Логотип Инстаграмм"
+                    width="20"
+                  />
                 </a>
               </li>
               <li class="socials-title">
                 <a href="https://www.facebook.com/">
-                  <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
+                  <img
+                    src="./images/facebook.svg"
+                    alt="Логотип Фейсбук"
+                    width="20"
+                  />
                 </a>
               </li>
               <li class="socials-title">
                 <a href="https://twitter.com/explore">
-                  <img src="./images/twitter.svg" alt="Логотип твиттер"
+                  <img
+                    src="./images/twitter.svg"
+                    alt="Логотип твиттер"
+                    width="20"
                 /></a>
               </li>
               <li class="socials-title">
                 <a href="https://www.linkedin.com/"></a>
-                <img src="./images/linkedln.svg" alt="Логотип линкодин" />
+                <img
+                  src="./images/linkedln.svg"
+                  alt="Логотип линкодин"
+                  width="20"
+                />
               </li>
             </ul>
           </li>
@@ -242,32 +306,32 @@
         <ul class="list">
           <li class="list-title">
             <a href="">
-              <img src="./images/imag1.svg" alt="Логотип компании партнера" />
+              <img src="./images/client1.svg" alt="Логотип компании партнера" />
             </a>
           </li>
           <li class="list-title">
             <a href="">
-              <img src="./images/imag1.svg" alt="Логотип компании партнера" />
+              <img src="./images/client2.svg" alt="Логотип компании партнера" />
             </a>
           </li>
           <li class="list-title">
             <a href="">
-              <img src="./images/imag1.svg" alt="Логотип компании партнера" />
+              <img src="./images/client3.svg" alt="Логотип компании партнера" />
             </a>
           </li>
           <li class="list-title">
             <a href="">
-              <img src="./images/imag1.svg" alt="Логотип компании партнера" />
+              <img src="./images/client4.svg" alt="Логотип компании партнера" />
             </a>
           </li>
           <li class="list-title">
             <a href="">
-              <img src="./images/imag1.svg" alt="Логотип компании партнера" />
+              <img src="./images/client5.svg" alt="Логотип компании партнера" />
             </a>
           </li>
           <li class="list-title">
             <a href="">
-              <img src="./images/imag1.svg" alt="Логотип компании партнера" />
+              <img src="./images/client6.svg" alt="Логотип компании партнера" />
             </a>
           </li>
         </ul>
@@ -282,12 +346,12 @@
           <address>
             <ul class="adress">
               <div class="adress">г. Киев, пр-т Леси Украинки, 26</div>
-              <li>
+              <li class="mobile-title">
                 <a href="maito:info@defstudio.com" class="mobile"
                   >info@defstudio.com</a
                 >
               </li>
-              <li>
+              <li class="mobile-title">
                 <a href="tel:+380961111111" class="mobile">+38 096 111 11 11</a>
               </li>
             </ul>
@@ -298,23 +362,38 @@
           <ul class="content-title">
             <li class="socials-title">
               <a href="https://www.instagram.com/?hl=ru">
-                <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
+                <img
+                  src="./images/instagram.svg"
+                  alt="Логотип Инстаграмм"
+                  width="20px"
+                />
               </a>
             </li>
             <li class="socials-title">
               <a href="https://twitter.com/explore">
-                <img src="./images/twitter.svg" alt="Логотип твиттер"
+                <img
+                  src="./images/twitter.svg"
+                  alt="Логотип твиттер"
+                  width="20px"
               /></a>
             </li>
             <li class="socials-title">
               <a href="https://www.facebook.com/">
-                <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
+                <img
+                  src="./images/facebook.svg"
+                  alt="Логотип Фейсбук"
+                  width="20px"
+                />
               </a>
             </li>
 
             <li class="socials-title">
               <a href="https://www.linkedin.com/"></a>
-              <img src="./images/linkedln.svg" alt="Логотип линкодин" />
+              <img
+                src="./images/linkedln.svg"
+                alt="Логотип линкодин"
+                width="20px"
+              />
             </li>
           </ul>
         </div>
