--- a/index.html
+++ b/index.html
@@ -46,11 +46,15 @@
       </div>
     </header>
     <main>
-      <section class="container-box">
+            <section>
+              <div class="container-box">
+        
         <h1 class="preview">эффективные решения для вашего бизнеса</h1>
-        <a class="button" href="">Заказать услугу</a>
+        <div class="button-items">
+        <a class="button" href="">Заказать услугу</a> </div>
       </section>
-      <section class="container-box">
+      <section>
+        <div class="container-box">
         <h2 class="none">Преимущества нашей студии</h2>
         <ul class="box">
           <li>
@@ -95,8 +99,11 @@
             </p>
           </li>
         </ul>
+        </div>
+        </div>
       </section>
-      <section class="container-box">
+      <section>
+        <div class="container-box">
         <h2 class="heading">Чем мы занимаемся</h2>
         <ul class="items-title">
           <li class="heading-title">
@@ -118,8 +125,11 @@
             </a>
           </li>
         </ul>
+        </div>
+        </div>
       </section>
-      <section class="container-box">
+      <section>
+        <div class="container-box">
         <h2 class="heading">Наша команда</h2>
         <ul class="meta">
           <li class="holder">
@@ -300,8 +310,10 @@
             </ul>
           </li>
         </ul>
+        </div>
       </section>
-      <section class="container-box">
+      <section>
+        <div class="container-box">
         <h2 class="heading">Постоянные клиенты</h2>
         <ul class="list">
           <li class="list-title">
@@ -335,9 +347,11 @@
             </a>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <footer>
+      <div class="container-box">
       <div class="footer">
         <div class="avatar">
           <a href="/" class="logos-footer">
@@ -400,6 +414,7 @@
         <p class="list-items">Подпишитесь на рассылку</p>
       </div>
       <p class="aside">2020 | Developed by GoIT Students</p>
+      </div>
     </footer>
   </body>
 </html>
