--- a/portfolio.html
+++ b/portfolio.html
@@ -120,53 +120,51 @@
       </ul>
     </main>
     <footer>
-      <div class="footer">
-        <div class="avatar">
-          <a href="/" class="logos-footer">
-            <span class="logo">Web</span> Studio</a
-          >
-          <address>
-            <ul class="adress">
-              <div class="adress">г. Киев, пр-т Леси Украинки, 26</div>
-              <li>
-                <a href="maito:info@defstudio.com" class="mobile"
-                  >info@defstudio.com</a
-                >
+      <div class="container-box">
+        <div class="footer">
+          <div class="avatar">
+            <a href="/" class="logos-footer">
+              <span class="logo">Web</span> Studio</a>
+            <address>
+              <ul class="adress">
+                <div class="adress">г. Киев, пр-т Леси Украинки, 26</div>
+                <li class="mobile-title">
+                  <a href="maito:info@defstudio.com" class="mobile">info@defstudio.com</a>
+                </li>
+                <li class="mobile-title">
+                  <a href="tel:+380961111111" class="mobile">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="content">
+            <p class="list-items">Присоединяйтесь</p>
+            <ul class="content-title">
+              <li class="socials-title">
+                <a href="https://www.instagram.com/?hl=ru">
+                  <img src="./images/instagram.svg" alt="Логотип Инстаграмм" width="20px" />
+                </a>
               </li>
-              <li>
-                <a href="tel:+380961111111" class="mobile">+38 096 111 11 11</a>
+              <li class="socials-title">
+                <a href="https://twitter.com/explore">
+                  <img src="./images/twitter.svg" alt="Логотип твиттер" width="20px" /></a>
+              </li>
+              <li class="socials-title">
+                <a href="https://www.facebook.com/">
+                  <img src="./images/facebook.svg" alt="Логотип Фейсбук" width="20px" />
+                </a>
+              </li>
+    
+              <li class="socials-title">
+                <a href="https://www.linkedin.com/"></a>
+                <img src="./images/linkedln.svg" alt="Логотип линкодин" width="20px" />
               </li>
             </ul>
-          </address>
+          </div>
+          <p class="list-items">Подпишитесь на рассылку</p>
         </div>
-        <div class="content">
-          <p class="list-items">Присоединяйтесь</p>
-          <ul class="content-title">
-            <li class="socials-title">
-              <a href="https://www.instagram.com/?hl=ru">
-                <img src="./images/instagram.svg" alt="Логотип Инстаграмм" />
-              </a>
-            </li>
-            <li class="socials-title">
-              <a href="https://twitter.com/explore">
-                <img src="./images/twitter.svg" alt="Логотип твиттер"
-              /></a>
-            </li>
-            <li class="socials-title">
-              <a href="https://www.facebook.com/">
-                <img src="./images/facebook.svg" alt="Логотип Фейсбук" />
-              </a>
-            </li>
-
-            <li class="socials-title">
-              <a href="https://www.linkedin.com/"></a>
-              <img src="./images/linkedln.svg" alt="Логотип линкодин" />
-            </li>
-          </ul>
-        </div>
-        <p class="list-items">Подпишитесь на рассылку</p>
+        <p class="aside">2020 | Developed by GoIT Students</p>
       </div>
-      <p class="aside">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
