--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     </header>
     <main>
             <section>
-              <div class="container-box">
-        
+              <div class="box-container">        
         <h1 class="preview">эффективные решения для вашего бизнеса</h1>
         <div class="button-items">
         <a class="button" href="">Заказать услугу</a> </div>
@@ -57,7 +56,7 @@
         <div class="container-box">
         <h2 class="none">Преимущества нашей студии</h2>
         <ul class="box">
-          <li>
+          <li class="box-title">
             <div class="picture">
               <img src="./images/antenna.svg" alt="Антена" />
             </div>
@@ -67,7 +66,7 @@
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="box-title">
             <div class="picture">
               <img src="./images/clock.svg" alt="Часы" />
             </div>
@@ -77,7 +76,7 @@
               влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="box-title">
             <div class="picture">
               <img src="./images/computer.svg" alt="Компьютер" />
             </div>
@@ -88,7 +87,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="box-title">
             <div class="picture">
               <img src="./images/cosmonaut.svg" alt="Космнавт" />
             </div>
@@ -133,7 +132,7 @@
         <h2 class="heading">Наша команда</h2>
         <ul class="meta">
           <li class="holder">
-            <img src="./images/jhon.jpg" alt="Фото John Smith" width="270" />
+            <img src="./images/jhon.jpg" alt="Фото John Smith" width="270" class="photo"/>
             <h3 class="name">John Smith</h3>
             <p class="desc">Product Designer</p>
             <ul class="socials">
@@ -177,7 +176,7 @@
             <img
               src="./images/marta.jpg"
               alt="Фото Marta Stewart"
-              width="270"
+              width="270" class="photo"
             />
             <h3 class="name">Marta Stewart</h3>
             <p class="desc">Frontend Developer</p>
@@ -222,7 +221,7 @@
             <img
               src="./images/robert.jpg"
               alt="Фото Robert Jakis"
-              width="270"
+              width="270" class="photo"
             />
             <h3 class="name">Robert Jakis</h3>
             <p class="desc">Marketing</p>
@@ -268,7 +267,7 @@
               src="./images/martin.jpg"
               alt="Фото Martin Doe"
               width="270"
-              height="260"
+              height="260" class="photo"
             />
             <h3 class="name">Martin Doe</h3>
             <p class="desc">UI Designer</p>
@@ -351,7 +350,7 @@
       </section>
     </main>
     <footer>
-      <div class="container-box">
+      <div class="container-footer">
       <div class="footer">
         <div class="avatar">
           <a href="/" class="logos-footer">
@@ -411,7 +410,9 @@
             </li>
           </ul>
         </div>
-        <p class="list-items">Подпишитесь на рассылку</p>
+        <div class="aside-list"> 
+          <p class="list-items">Подпишитесь на рассылку</p>
+          </div>
       </div>
       <p class="aside">2020 | Developed by GoIT Students</p>
       </div>
